# practice_asobi

./: README.md
whisper-transcription/: .env.example  .gitignore  app.py  main.py  pyproject.toml  transcribe.py
whisper-transcription/app/: __init__.py  config.py  localtest_script.py  main.py  prompt_test.py  transcribe.py  whisper_service.py
whisper-transcription/app/adapter/: llm_factory.py  openai_client.py  openai_clinet.py
whisper-transcription/app/adapter/handler/: gemini_handler.py  openai_handler.py
whisper-transcription/app/adapter/llm_client/: i_llm_client.py  llm_client.py
whisper-transcription/app/domain/entities/: llm_provider.py
whisper-transcription/app/domain/interface/: llm_client.py  transcription_client.py
whisper-transcription/app/llm_client/: i_llm_client.py
whisper-transcription/app/usecase/: __init__.py  extract_highlights_service.py  whisper_service.py
whisper-transcription/app/usecase/prompts/: __init__.py
whisper-transcription/app/usecase/prompts/extract_highlights/: json_schema.json  system_prompt.md  user_prompt.md
whisper-transcription/app/usecase/prompts/extract_key_segments/: json_schema.json  system_prompt.md  user_prompt.md
whisper-transcription/app/usecase/service/: __init__.py  add_subtitles_service.py  extract_highlights_service.py  extract_key_segments_service.py  transcribe_video_service.py  transcription_service.py  translate_segments_service.py  trim_video_service.py  whisper_service.py
whisper-transcription/app/utli/: __init__.py  logger.py  time_utils.py
(+7 files in other folders)
