[project]
name = "practice-asobi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper>=20231117",
    "streamlit>=1.27.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy==1.26.4",
    "pandas>=1.3.0",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "openai>=2.14.0",
    "moviepy>=2.2.1",
    "python-dotenv>=1.0.0",
    "langchain-openai>=1.1.7",
    "langchain-core>=1.2.7",
]
